Add phonon polaritons hBN collaboration test notebook

--- a/phonon_polaritons_hBN.ipynb
+++ b/phonon_polaritons_hBN.ipynb
@@ -403,6 +403,13 @@
         "- Create visualizations for different hBN thicknesses\n",
         "- Compare with other 2D materials like graphene or MoS₂\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Hey"
+      ]
     }
   ],
   "metadata": {
