Add collaboration test cell for Sergi

--- a/phonon_polaritons_hBN.ipynb
+++ b/phonon_polaritons_hBN.ipynb
@@ -408,6 +408,22 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## 🧪 COLLABORATION TEST CELL\n",
+        "\n",
+        "**Instructions for Sergi:**\n",
+        "1. Change the value below from \"TEST_VALUE\" to \"SERGI_WAS_HERE\"\n",
+        "2. Add your name and timestamp\n",
+        "3. Save the cell\n",
+        "\n",
+        "**Current value:** TEST_VALUE\n",
+        "\n",
+        "**Your changes here:** [Sergi, please edit this line]\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Hey"
       ]
     }
