add comment to phonon_polariton

--- a/phonon_polaritons_hBN.ipynb
+++ b/phonon_polaritons_hBN.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -40,7 +40,7 @@
         }
       ],
       "source": [
-        "import numpy as np\n",
+        "import numpy as np ## test adding a comment. do you see it?\n",
         "import matplotlib.pyplot as plt\n",
         "from scipy.optimize import fsolve\n",
         "import warnings\n",
