changs from cursor

--- a/phonon_polaritons_hBN.ipynb
+++ b/phonon_polaritons_hBN.ipynb
@@ -4,6 +4,30 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Phonon Polaritons in hBN - Collaboration Test\n",
+        "\n",
+        "This notebook is for testing team collaboration features in Cursor.\n",
+        "\n",
+        "## Quick Test\n",
+        "**Can you edit this cell?** Try changing this text!\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Test cell - can you edit this?\n",
+        "import numpy as np\n",
+        "print(\"Hello from the collaboration test!\")\n",
+        "print(\"Try changing this code!\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Phonon Polaritons in Hexagonal Boron Nitride (hBN)\n",
         "\n",
         "This notebook explores the fascinating physics of phonon polaritons in hexagonal boron nitride (hBN), a 2D material with unique optical properties.\n",
